salt/roots/iptables/dotfiles/ip6tables.rules
###
### Simple stateful firewall
###     - https://wiki.archlinux.org/index.php/Simple_stateful_firewall
###
# Generated by iptables-save v1.8.3 on Thu Feb 20 07:52:08 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [791:59807]
:TCP - [0:0]
:UDP - [0:0]
# ACCEPT all packets received in the context of an ongoing connection
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# ACCEPT all traffic from loopback(lo) interface
-A INPUT -i lo -j ACCEPT
# DROP all invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP
# ACCEPT ICMP echo requests (ping)
-A INPUT -p icmpv6 --icmpv6-type 128 -m conntrack --ctstate NEW -j ACCEPT
# Allow ICMPv6 Neighbor Discovery Protocol regardless of state
-A INPUT -s fe80::/10 -p icmpv6 -j ACCEPT
# Handle NEW udp connections with UDP user-defined-chain
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
# Handle NEW SYN tcp connections with TCP user-defined-chain
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
# REJECT other udp packets
-A INPUT -p udp -j REJECT --reject-with icmp6-adm-prohibited
# REJECT other tcp packets
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
# REJECT other protocols
-A INPUT -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
# Completed on Thu Feb 20 07:52:08 2020
