salt/roots/iptables/dotfiles/iptables.rules
###
### Simple stateful firewall
###     - https://wiki.archlinux.org/index.php/Simple_stateful_firewall
###
# Generated by iptables-save v1.8.3 on Thu Feb 20 07:52:08 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [791:59807]
:TCP - [0:0]
:UDP - [0:0]
# ACCEPT all packets received in the context of an ongoing connection
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# ACCEPT all traffic from loopback(lo) interface
-A INPUT -i lo -j ACCEPT
# DROP all invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP
# ACCEPT ICMP echo requests (ping)
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
# Handle NEW udp connections with UDP user-defined-chain
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
# Handle NEW SYN tcp connections with TCP user-defined-chain
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
# REJECT other tcp packets and add hosts to /proc/net/xt_recent/TCP-PORTSCAN
-A INPUT -p tcp -m recent --set --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
# REJECT Add hosts with rejected packets to the /proc/net/xt_recent/UDP-PORTSCAN
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
# REJECT other protocols
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
# REJECT tcp packets from any host that got onto the TCP-PORTSCAN list in the past sixty seconds
-A TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
# REJECT udp packets from any host that got onto the UDP-PORTSCAN list in the past sixty seconds
-A UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Feb 20 07:52:08 2020
